tests/core/snapshots/auth-multiple-complex.md_2.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "animals": [
        {
          "__typename": "Dog"
        },
        {
          "__typename": "Cat"
        },
        {
          "__typename": "Bird",
          "tweet": "tweet"
        }
      ]
    }
  }
}
