tests/core/snapshots/auth-multiple-complex.md_6.snap
---
source: tests/core/spec.rs
expression: response
snapshot_kind: text
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "animals": [
        {
          "__typename": "Dog",
          "bark": "woof"
        },
        {
          "__typename": "Cat"
        },
        {
          "__typename": "Bird",
          "tweet": "tweet"
        }
      ]
    }
  }
}
