tests/core/snapshots/auth-multiple-complex.md_7.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "animals": [
        {
          "__typename": "Dog",
          "bark": "woof"
        },
        {
          "__typename": "Cat",
          "meow": "meow"
        },
        {
          "__typename": "Bird"
        }
      ]
    }
  }
}
