tests/core/snapshots/auth-multiple.md_13.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "a_and_b": "data",
      "default": "data"
    }
  }
}
