tests/core/snapshots/auth-multiple.md_15.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "c_or_a": "data"
    }
  }
}
